# performance_plusv2

./: .dockerignore  .env.example  .gitignore  01-DESIGN.md  CLAUDE.md  DEMO-SCRIPT.md  Dockerfile  Dockerfile.coolify  Dockerfile.vps  README.md  SECURITY.md  app.py  compose.yaml  data.py  data_generator.py  ingest.py  llm.py  pdf_report.py  pyproject.toml  st_db.py  ui_helpers.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.streamlit/: config.toml
api/: db.py  email_utils.py  main.py  models.py
caddy/: Caddyfile
data/: crm_data.csv  custom_ads.csv  fixture_results.json  google_ads.csv  linkedin_ads.csv  meta_ads.csv  web_analytics.csv
deploy/: nginx.conf  supervisord.conf
design/screens/: 01-load-demo.html  02-dataframe-preview.html  03-results.html
landing/: .env.example  Dockerfile  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: DemoAnimation.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  WaitlistForm.tsx  badge-tokens.ts
scripts/: generate_fixture.py
tests/: test_api.py  test_app_structure.py  test_data.py  test_data_generator.py  test_deploy_config.py  test_evals.py  test_ingest.py  test_llm.py  test_llm_eval.py  test_pdf_report.py  test_phase7_landing.py  test_st_db.py  test_ui_helpers.py
(+79 files in other folders)
