[project]
name = "performance-plus"
version = "0.1.0"
description = "Autonomous Semantic Attribution Engine"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.40,<2.0",
  "pandas>=2.2.3,<2.3",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
]

[tool.ruff]
line-length = 100
