[project]
name = "performance-plus"
version = "0.1.0"
description = "Autonomous Semantic Attribution Engine"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.40,<2.0",
  "pandas>=2.2.3,<2.3",
  "python-dotenv>=1.0",
  "openai>=1.50,<2.0",
  "pydantic>=2.8,<3.0",
  "tenacity>=8.5",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
]

[tool.ruff]
line-length = 100
