[project]
name = "performance-plus"
version = "0.1.0"
description = "Autonomous Semantic Attribution Engine"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.40,<2.0",
  "pandas>=2.2.3,<2.3",
  "python-dotenv>=1.0",
  "openai>=1.50,<2.0",
  "pydantic>=2.8,<3.0",
  "tenacity>=8.5",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "email-validator>=2.0,<3.0",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pyyaml>=6.0.3",
  "httpx>=0.27,<1.0",
]

[tool.ruff]
line-length = 100
